Update external attachments to use a filename placeholder when generating the outbound message